@@ -11,7 +11,6 @@ import de.caritas.cob.agencyservice.api.model.TopicDTO;
 import de.caritas.cob.agencyservice.api.repository.agency.Agency;
 import de.caritas.cob.agencyservice.api.repository.agencytopic.AgencyTopic;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 
@@ -22,6 +21,7 @@ import lombok.RequiredArgsConstructor;
 public class AgencyAdminFullResponseDTOBuilder {
 
   private final @NonNull Agency agency;
+
 
   /**
    * Creates an {@link AgencyAdminFullResponseDTO()} with HAL-Links from an {@link Agency}
@@ -38,7 +38,7 @@ public class AgencyAdminFullResponseDTOBuilder {
   private AgencyAdminResponseDTO createAgency() {
     var responseDTO = new AgencyAdminResponseDTO()
         .id(this.agency.getId())
-        .dioceseId(this.agency.getDioceseId())
+        .tenantId(agency.getTenantId())
         .name(this.agency.getName())
         .city(this.agency.getCity())
         .consultingType(this.agency.getConsultingTypeId())
@@ -52,7 +52,9 @@ public class AgencyAdminFullResponseDTOBuilder {
         .counsellingRelations(splitToList(agency.getCounsellingRelations()))
         .createDate(String.valueOf(this.agency.getCreateDate()))
         .updateDate(String.valueOf(this.agency.getUpdateDate()))
-        .deleteDate(String.valueOf(this.agency.getDeleteDate()));
+        .deleteDate(String.valueOf(this.agency.getDeleteDate()))
+        .dataProtection(new DataProtectionDTOBuilder(this.agency).fromAgency())
+        .agencyLogo(this.agency.getAgencyLogo());
 
     responseDTO.demographics(getDemographics(this.agency));
     return responseDTO;
@@ -63,7 +65,7 @@ public class AgencyAdminFullResponseDTOBuilder {
       return Lists.newArrayList();
     } else {
       return Splitter.on(",").trimResults()
-          .splitToList(counsellingRelationsAsCommaSeparatedString).stream().map(AgencyAdminResponseDTO.CounsellingRelationsEnum::valueOf).collect(Collectors.toList());
+          .splitToList(counsellingRelationsAsCommaSeparatedString).stream().map(AgencyAdminResponseDTO.CounsellingRelationsEnum::valueOf).toList();
     }
   }
 
@@ -84,7 +86,7 @@ public class AgencyAdminFullResponseDTOBuilder {
   }
 
   private List<TopicDTO> getTopics(List<AgencyTopic> agencyTopics) {
-    return agencyTopics.stream().map(AgencyTopic::getTopicData).collect(Collectors.toList());
+    return agencyTopics.stream().map(AgencyTopic::getTopicData).toList();
   }
 
   private AgencyLinks createAgencyLinks() {
